--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p id="energyLevel"></p>
+    <p id="energyLevel">energy level : __ %</p>
     <button onclick="switchState('activate')">activate</button>
     <button onclick="switchState('desactivate')">desactive</button>
     <br />
